# Ghostly-Jones-Investigations

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: input.cfg  scenarios.ini
assets/environments/: JonesOffice.cnmdl  scenario1.ini  scenario2.ini  scenario3.ini
assets/items/: camera.ini  test.ini
assets/npcs/: cop.ini  cop2.ini  cop3.ini  cop4.ini  sunhat.ini
game/include/: clue_manager.h  dialog.h  flag_manager.h  game.h  gamestates.h  globals.h  holo_entity.h  player.h  titlescreen.h
game/include/interactable/: item.h  npc.h
game/include/ui/: textbox.h
game/src/: clue_manager.c  flag_manager.c  game.c  holo_entity.c  main.c  player.c  titlescreen.c
game/src/interactable/: item.c  npc.c
game/src/ui/: textbox.c
